@@ -1,0 +1,12 @@
+// $Id$
+
+#ifdef LOCAL
+local
+#endif
+interface X {
+  void op();
+};
+struct Y {
+  X theX;
+};
+typedef sequence<X> XSeq;
